--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@atomap/use-places-autocomplete": "^1.0.4",
     "@heroicons/react": "^1.0.3",
+    "google-map-react": "^2.1.10",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
