--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-leaflet": "^3.2.0"
+    "react-leaflet": "^3.2.0",
+    "react-places-autocomplete": "^7.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
